<resources>
    <string name="app_name">Thinkink</string>
    <string name="action_settings">Settings</string>
    <string name="loginTitle">Ingresar</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Contraseña</string>
    <string name="sinCuenta">¿No posees cuenta?</string>
    <string name="sinCuentaButton">Regístrate aquí</string>
    <string name="RegisterTitle">Registro</string>
    <string name="nombreHint">Nombre</string>
    <string name="apellidoHint">Apellido</string>
    <string name="passwordHintConfirmation">Repetir Contraseña</string>
    <string name="buttonRegistro">Registrarse</string>
    <string name="buttonRegistroSalir">Salir</string>
    <string name="buttonSingIn">Ingresar</string>
    <string name="radiousTrue">Tatuador</string>
    <string name="action_add">Agregar</string>
    <string name="titleCardInfo">Información</string>
    <string name="textoCardInfo">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.</string>
    <string name="action_salir">Salir</string>
    <string name="editar">Editar</string>
    <string name="localTitle">Confirmación del local</string>
    <string name="localAcept">Aceptar</string>
    <string name="localCancel">Cancelar</string>
    <string name="tag">fsadf</string>
    <string name="local_name">Nombre del local</string>
</resources>
