<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView2"
        android:fillViewport="true">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:id="@+id/imageFondoLogo"
                    android:background="@color/colorPrimaryDark"

                    android:layout_gravity="center_horizontal|top" />

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:paddingTop="15dp"
                    android:id="@+id/imageView"
                    android:layout_gravity="center_horizontal|top"
                    android:src="@drawable/logocontitulo" />

            </FrameLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/textViewRegisterTitle"
                    android:layout_gravity="center"
                    android:text="@string/RegisterTitle"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:theme="@style/Theme.App.Base"
                        android:hint="@string/nombreHint"
                        android:ems="10"
                        android:id="@+id/editTextNombre"
                        android:layout_gravity="center_horizontal"
                        android:layout_below="@+id/textViewRegisterTitle"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp" />

                </LinearLayout>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/Theme.App.Base"
                    android:paddingTop="20dp"
                    android:inputType="textEmailAddress"
                    android:hint="@string/emailHint"
                    android:ems="10"
                    android:id="@+id/editTextEmail"
                    android:layout_gravity="center_horizontal"
                    android:layout_below="@+id/editTextEmail"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/Theme.App.Base"
                    android:paddingTop="20dp"
                    android:inputType="textPassword"
                    android:hint="@string/passwordHint"
                    android:ems="10"
                    android:id="@+id/editTextPsss"
                    android:layout_gravity="center_horizontal"
                    android:layout_below="@+id/editTextEmail"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/Theme.App.Base"
                    android:paddingTop="20dp"
                    android:inputType="textPassword"
                    android:hint="@string/passwordHintConfirmation"
                    android:ems="10"
                    android:id="@+id/editTextPassConfirmation"
                    android:layout_gravity="center_horizontal"
                    android:layout_below="@+id/editTextEmail"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp" />
                <!-- View - Filler - Rellena el espacio entre editText y imageView-->


                <Switch
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Tatuador"
                    android:id="@+id/switch1"

                    android:paddingTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textSize="9pt"

                    />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center">

                    <Button
                        android:theme="@style/SpecialButton"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/buttonRegistro"
                        android:id="@+id/buttonRegistro" />

                </LinearLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_weight="1" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:id="@+id/imageBottom"
                    android:background="@color/colorPrimaryDark"
                    android:layout_gravity="center_horizontal|bottom"
                    android:baselineAlignBottom="false"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_weight="0" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>